--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -423,7 +423,8 @@
         padding: 0;
     }
 
-    .list-url {
+    .list-url a{
         padding-top: 0;
+        font-size: .9em;
     }
 }
